@@ -105,12 +105,16 @@ NEWS/ChangeLog for hydroPSO
 
         o 'plot_results'    : -) new argument 'do.pairs' (by default 'do.pairs=FALSE'), to control if the correlation matrix among parameters has to be plotted or not
                                  (up to hydroPSO <=0.1.58 it was always plotted)
+                              -) default value for 'alpha' argument was changed from 1 to 0.65
 
         o 'plot_out'        : -) argument 'MinMax' is not required any more!
                               -) argument 'sim' may also be 'integer' (before it had to be 'numeric', which does not allow 'integer' objects !)  
 
         o 'plot_NparOF'     : -) new argument 'beh.thr' to allow selecting only behavioral parameter sets
                               -) argument 'MinMax' now accepts a NULL value (default)
+                              -) default value for 'alpha' argument was changed from 1 to 0.65
+
+        o 'plot_2parOF'     : -) default value for 'alpha' argument was changed from 1 to 0.65
 
         o 'params2ecdf'     : -) new arguments 'gofs', 'MinMax' and 'beh.thr' 
                             
